[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "google-api-python-client>=2.177.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.6",
    "langgraph>=0.5.4",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
    "supabase>=2.17.0",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
]
